--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"next": "15.1.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-pdf": "^9.2.1",
 		"webtic-ui": "^1.0.3"
 	},
 	"devDependencies": {
